k8s/AGIC/jaeger-ingress-with-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger-ingress
  namespace: genocs-demo
  labels:
    name: jaeger-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    cert-manager.io/cluster-issuer: letsencrypt-staging-cluster-issuer
    cert-manager.io/acme-challenge-type: http01
spec:
  rules:
    - http:
        paths:
          - path: /inte
            pathType: Exact
            backend:
              service:
                name: integration-ftp-service
                port:
                  number: 80

      host: genocs-aks.westeurope.cloudapp.azure.com
  tls:
    - hosts:
        - genocs-aks.westeurope.cloudapp.azure.com
      secretName: tls-secret
