k8s/AGIC/mongo-ingress-with-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-ingress
  namespace: default
  labels:
    name: mongo-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    cert-manager.io/cluster-issuer: letsencrypt-staging-cluster-issuer
    cert-manager.io/acme-challenge-type: http01
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongo-mongodb
                port:
                  number: 27017

      host: genocs-aks.westeurope.cloudapp.azure.com
  tls:
    - hosts:
        - genocs-aks.westeurope.cloudapp.azure.com
      secretName: tls-secret
